--- a/src/index.css
+++ b/src/index.css
@@ -42,28 +42,34 @@ a:hover {
 /* Post Styles */
 .post-container {
   background: #fff;
-  padding: 50px;
-  width: 50%;
-  margin: 40px auto;
+  padding: 15px;
+  width: 25%;
+
+  margin-left: 2%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+
   box-shadow: 0 5px 15px 0 rgba(46, 61, 73, 0.12);
   font-family: "Work Sans", sans-serif;
+  display: inline-block;
+  position: fixed;
 }
 
 .post_heading {
   text-align: center;
   font-weight: 400;
-  font-size: 40px;
+  font-size: 30px;
   color: #636363;
 }
 
-.form {
+.post_form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.form input {
+.post_form input:required {
   height: 44px;
   padding-left: 15px;
   padding-right: 15px;
@@ -76,7 +82,7 @@ a:hover {
   width: 80%;
 }
 
-.form textarea {
+.post_form textarea {
   width: 80%;
   max-width: 80%;
   padding-left: 15px;
@@ -93,6 +99,16 @@ a:hover {
 
 /* All Posts */
 
+.all_posts {
+  font-size: 20px;
+  width: 55%;
+  align-items: center;
+  display: inline-block;
+  position: relative;
+  left: 35%;
+  margin-right: 5%;
+  text-align: left;
+}
 .all_post_heading {
   text-align: center;
   font-weight: 400;
@@ -101,16 +117,7 @@ a:hover {
   word-wrap: break-word;
 }
 
-.post {
-  background: #fff;
-  width: 60%;
-  margin: 0 auto;
-  padding: 30px;
-  margin-bottom: 20px;
-  box-shadow: 10px 10px 12px 0 rgba(46, 60, 73, 0.05);
-}
-
-.form #post_button {
+.post_form #post_button {
   background: #02b3e4;
   text-align: center;
   color: #fff;
@@ -120,7 +127,7 @@ a:hover {
   font-size: 20px;
 }
 
-.form #post_Update_button {
+.post_form #post_Update_button {
   background: green;
   text-align: center;
   color: #fff;
@@ -130,47 +137,29 @@ a:hover {
   font-size: 20px;
 }
 
-.post_title {
-  text-align: center;
-  font-weight: 400;
-  font-size: 40px;
-  color: #636363;
-  word-wrap: break-word;
-}
-
-.post_message {
-  font-size: 25px;
-  font-weight: 200;
-  line-height: 2.5rem;
-  text-align: center;
-  word-wrap: break-word;
-}
-
-.control-buttons {
-  display: flex;
-}
-
 .delete {
   background: #ff7777;
   border: none;
   text-align: center;
-  font-size: 20px;
-  padding: 10px 25px;
+  font-size: 18px;
+  padding: 5px 15px;
   border-radius: 20px;
   cursor: pointer;
   outline: none;
   color: #fff;
+  align-items: center;
 }
 
 .edit {
   background: #02b3e4;
   border: none;
   text-align: center;
-  font-size: 20px;
-  padding: 10px 25px;
+  font-size: 18px;
+  padding: 5px 15px;
   border-radius: 20px;
   cursor: pointer;
-  margin-right: auto;
+  margin-right: 10px;
   outline: none;
   color: #fff;
+  align-items: center;
 }
